third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/nan-incomplete-2.stderr
TOML parse error at line 1, column 21
  |
1 | nan-incomplete-2 = +na
  |                     ^
invalid integer
